<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:context="testes.yamdag1.MovieDetailsActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="200px"
        android:layout_height="255px"
        android:layout_alignParentLeft="true"

        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/image"
        android:text="@string/title"/>
    <TextView
        android:id="@+id/orig_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image"
        android:layout_alignParentRight="true"
        android:layout_below="@id/title"
        android:text="@string/orig_title"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image"
        android:layout_alignParentRight="true"
        android:layout_below="@id/orig_title"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image"
        android:layout_alignParentRight="true"
        android:layout_below="@id/date"
        android:text="@string/vote"/>
    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="@string/overview"/>

</RelativeLayout>
